[fixed] Backend byte 반환 -> String으로 반환 | ResponsePacket 클래스 구성 | BufferedReader close 처리 | [Todo] HttpStatusCode 반환로직 수정 | Runnable -> Callable 수정